--- a/src/md/vpn-chromeos.mdx
+++ b/src/md/vpn-chromeos.mdx
@@ -26,19 +26,19 @@
 1. Check the "Save identity and password" button				<br />
 1. Click connect												<br />
 
-*If this option doesn't show up, your Chromebook does not 
-support StrongSwan. We may implement a version that supports 
+*If this option doesn't show up, your Chromebook does not
+support StrongSwan. We may implement a version that supports
 these older models.										<br /><br />
 
 ##### Troubleshooting
 
-- Fails to connect
+- Fails to connect												<br />
 
 	Check to make sure you have filled out all of the fields correctly.
 	There may also be a WiFi policy that blocks VPN's. Try on a different
 	network.
 
-- It shows connected, but my IP doesn't change
+- It shows connected, but my IP doesn't change					<br />
 
 	WiFi policy again. Don't worry, the built-in ad blocking and tracker
 	blocking will still be doing its thing!
