--- a/src/md/vpn-linux.mdx
+++ b/src/md/vpn-linux.mdx
@@ -12,11 +12,11 @@
 
 ##### Troubleshooting
 
-* `Failed to start strongswan-starter.service. Unit strongswan-starter.service not found.`
+* `Failed to start strongswan-starter.service. Unit strongswan-starter.service not found.`		<br />
 
 	Try making sure you have the correct packages installed, or make sure you spelled the start command correctly. If this still
 	doesn't work, try `sudo systemctl start strongswan.service`. **This might not work**.
 
-* My IP doesn't change or my WiFi doesn't work
+* My IP doesn't change or my WiFi doesn't work													<br />
 
 	Wait a bit, then try again
