i actually finished the ui part

--- a/src/md/vpn-android.mdx
+++ b/src/md/vpn-android.mdx
@@ -1,18 +1,18 @@
 #### This guide is written for devices running Android 12 or later
 
-1. Open the Settings app				  			<br />
-1. Click "Network & Internet"					 	<br />
-1. Click "VPN"										<br />
-1. Click the plus button at the top-right			<br />
-1. Make the name "Inertia VPN"						<br />
-1. Set the type to "IKEv2/IPsec PSK"				<br />
-1. Set the server address to `%VPN_IP%`				<br />
-1. Set the IPsec identifier to `%VPN_IP%`			<br />
-1. Set the IPsec pre-shared key to `%VPN_PSK%`		<br />
-1. Click "Save"										<br />
-1. Turn on the new VPN connection					<br />
+1. Open the Settings app				  					<br />
+1. Click "Network & Internet"							 	<br />
+1. Click "VPN"												<br />
+1. Click the plus button at the top-right					<br />
+1. Make the name "Inertia VPN"								<br />
+1. Set the type to "IKEv2/IPsec PSK"						<br />
+1. Set the server address to `%VPN_IP%`						<br />
+1. Set the IPsec identifier to your device's name			<br />
+1. Set the IPsec pre-shared key to the PSK of your device	<br />
+1. Click "Save"												<br />
+1. Turn on the new VPN connection							<br />
 
 ##### Troubleshooting
 
-- Doesn't connect									<br />
+- Doesn't connect											<br />
 	Make sure you filled out each field correctly
